# sfm_system

./: README.md  version_info
src/: setting.h~
src/sfm_ba/: CMakeLists.txt  package.xml
src/sfm_ba/SfMLib/: CMakeLists.txt  CVBundleAdjustor.h  CVFeatureMatcher.cpp  CVFeatureMatcher.h  EPGCameraPoseComputer.h  ICameraPosComputerEssentialMethod.h~  ICameraPosComputerPnPMethod.h~  PNPCameraPoseComputer.h  SfMLibCameraPoseComputer.cpp  SfMLibCameraPoseComputer.h  SfMLibFeatureMatcher.cpp  SfMLibFeatureMatcher.h  SfMLibTriangulator.cpp  SfMLibTriangulator.h  VirtualBundleAdjustor.h  version_info  version~
src/sfm_ba/msg/: BARequestMsg.msg~  ViewerRequestMsg.msg~
src/sfm_ba/src/: main.cpp  setting.h  sfm_ba.cpp  sfm_ba.h
src/sfm_manager/: CMakeLists.txt  package.xml
src/sfm_manager/SfMLib/: BasicSetting.h  CMakeLists.txt  CVBundleAdjustor.cpp  EPGCameraPoseComputer.cpp  ICameraPosComputer.h~  IFeatureMatcher.h~  LSTriangulator.cpp  LSTriangulator.h  PNPCameraPoseComputer.cpp  SfMLibObject.h  SfMTool.cpp  SfMTool.h  VirtualCameraPoseComputer.h  VirtualFeatureMatcher.h  VirtualTriangulator.h  read_me~
src/sfm_manager/msg/: CameraPose.msg~  SfMManagerCloudMsg.msg~  SfMPointsMsg.msg~  basicPoint.msg~  sfmBasicIndex.msg~  sfmBasicPoint.msg~  sfmPointsInfo.msg~
src/sfm_manager/src/: global_variable.h~  main.cpp  setting.h  sfm_manager.cpp  sfm_manager.h
src/sfm_viewer/: CMakeLists.txt  package.xml
src/sfm_viewer/src/: global_variable.h~  main.cpp  setting.h  viewer.cpp  viewer.h
