<?xml version="1.0"?>
<package>
  <name>sfm_manager</name>
  <version>0.0.0</version>
  <description>The sfm package</description>

  <maintainer email="yuwei.guo@qq.com">Yuwei Guo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <!--build_depend>message_generation</build_depend-->
  <!--build_depend>geometry_msgs</build_depend-->
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
