<?xml version="1.0"?>
<package>
  <name>sfm_viewer</name>
  <version>0.0.0</version>
  <description>The sfm_viewer package</description>

  <maintainer email="yuwei.guo@qq.com">yuwei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sfm</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sfm_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sfm</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sfm_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
